crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__selector__tests__arg_unclosed_map_nokey.snap
---
source: crates/parse/src/mcf/grammar/selector.rs
expression: "parse_selector(\"@s[score={\")"
---
Group(Selector) at 0:0 - 0:10 {
    Token(At) `@` at 0:0 - 0:1
    Joined(SelectorModS) `s` at 0:1 - 0:2
    Group(SelectorArgument) at 0:2 - 0:10 {
        Token(LBracket) `[` at 0:2 - 0:3
        Group(SelectorArgumentEntry) at 0:3 - 0:10 {
            Joined(UnquotedString) `score` at 0:3 - 0:8
            Token(Eq) `=` at 0:8 - 0:9
            Group(SelectorArgumentMap) at 0:9 - 0:10 {
                Token(LCurly) `{` at 0:9 - 0:10
                Group(SelectorArgumentMapEntry) at 0:10 - 0:10 {
                    Joined(ResourceLocation) `` at 0:10 - 0:10
                    Error `Expected one of '='` at 0:10 - 0:10
                    Joined(ResourceLocation) `` at 0:10 - 0:10
                }
                Error `Expected one of ','` at 0:10 - 0:10
                Error `Expected one of '}'` at 0:10 - 0:10
            }
        }
        Error `Expected one of ','` at 0:10 - 0:10
        Error `Expected one of ']'` at 0:10 - 0:10
    }
}

