crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__selector__tests__args_map_empty.snap
---
source: crates/parse/src/mcf/grammar/selector.rs
expression: "parse_selector(\"@a[scores={}]\")"
---
Group(Selector) at 0:0 - 0:13 {
    Token(At) `@` at 0:0 - 0:1
    Joined(SelectorModA) `a` at 0:1 - 0:2
    Group(SelectorArgument) at 0:2 - 0:13 {
        Token(LBracket) `[` at 0:2 - 0:3
        Group(SelectorArgumentEntry) at 0:3 - 0:12 {
            Joined(UnquotedString) `scores` at 0:3 - 0:9
            Token(Eq) `=` at 0:9 - 0:10
            Group(SelectorArgumentMap) at 0:10 - 0:12 {
                Token(LCurly) `{` at 0:10 - 0:11
                Token(RCurly) `}` at 0:11 - 0:12
            }
        }
        Token(RBracket) `]` at 0:12 - 0:13
    }
}

