crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__selector__tests__args_map_rid.snap
---
source: crates/parse/src/mcf/grammar/selector.rs
expression: "parse_selector(\"@p[advancements={path/to/adv={criteria=false}}]\")"
---
Group(Selector) at 0:0 - 0:47 {
    Token(At) `@` at 0:0 - 0:1
    Joined(SelectorModP) `p` at 0:1 - 0:2
    Group(SelectorArgument) at 0:2 - 0:47 {
        Token(LBracket) `[` at 0:2 - 0:3
        Group(SelectorArgumentEntry) at 0:3 - 0:46 {
            Joined(UnquotedString) `advancements` at 0:3 - 0:15
            Token(Eq) `=` at 0:15 - 0:16
            Group(SelectorArgumentMap) at 0:16 - 0:46 {
                Token(LCurly) `{` at 0:16 - 0:17
                Group(SelectorArgumentMapEntry) at 0:17 - 0:45 {
                    Joined(ResourceLocation) `path/to/adv` at 0:17 - 0:28
                    Token(Eq) `=` at 0:28 - 0:29
                    Group(SelectorArgumentMap) at 0:29 - 0:45 {
                        Token(LCurly) `{` at 0:29 - 0:30
                        Group(SelectorArgumentMapEntry) at 0:30 - 0:44 {
                            Joined(ResourceLocation) `criteria` at 0:30 - 0:38
                            Token(Eq) `=` at 0:38 - 0:39
                            Joined(ResourceLocation) `false` at 0:39 - 0:44
                        }
                        Token(RCurly) `}` at 0:44 - 0:45
                    }
                }
                Token(RCurly) `}` at 0:45 - 0:46
            }
        }
        Token(RBracket) `]` at 0:46 - 0:47
    }
}

