crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__selector__tests__args_word.snap
---
source: crates/parse/src/mcf/grammar/selector.rs
expression: "parse_selector(\"@s[tag=hello]\")"
---
Group(Selector) at 0:0 - 0:13 {
    Token(At) `@` at 0:0 - 0:1
    Joined(SelectorModS) `s` at 0:1 - 0:2
    Group(SelectorArgument) at 0:2 - 0:13 {
        Token(LBracket) `[` at 0:2 - 0:3
        Group(SelectorArgumentEntry) at 0:3 - 0:12 {
            Joined(UnquotedString) `tag` at 0:3 - 0:6
            Token(Eq) `=` at 0:6 - 0:7
            Joined(ResourceLocation) `hello` at 0:7 - 0:12
        }
        Token(RBracket) `]` at 0:12 - 0:13
    }
}

