crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__selector__tests__invalid_mod.snap
---
source: crates/parse/src/mcf/grammar/selector.rs
expression: "parse_selector(\"@q[name=\\\"hello\\\"]\")"
---
Group(Selector) at 0:0 - 0:16 {
    Token(At) `@` at 0:0 - 0:1
    Error `Expected one of 'p', 'a', 'r', 's', 'e'` at 0:1 - 0:2
    Token(Word) `q` at 0:1 - 0:2
    Group(SelectorArgument) at 0:2 - 0:16 {
        Token(LBracket) `[` at 0:2 - 0:3
        Group(SelectorArgumentEntry) at 0:3 - 0:15 {
            Joined(UnquotedString) `name` at 0:3 - 0:7
            Token(Eq) `=` at 0:7 - 0:8
            Token(QuotedString) `"hello"` at 0:8 - 0:15
        }
        Token(RBracket) `]` at 0:15 - 0:16
    }
}

