crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__selector__tests__no_args.snap
---
source: crates/parse/src/mcf/grammar/selector.rs
expression: "parse_selector(\"@p\")"
---
Group(Selector) at 0:0 - 0:2 {
    Token(At) `@` at 0:0 - 0:1
    Joined(SelectorModP) `p` at 0:1 - 0:2
}

